--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 :root{
   --bg--primary:#fff;
   --bg--secondary:#16C79A;
@@ -34,7 +34,7 @@ a{
 }
 
 .leaflet-container{
-  width:90%;
+  width:100%;
   height:50vh;
 }
 
