--- a/client/src/components/CardComponent/style.css
+++ b/client/src/components/CardComponent/style.css
@@ -1,6 +1,16 @@
 .card{
-    width:20rem;
-    min-height:25rem;
+    width:18rem;
+    min-height:20rem;
     /* border:1px solid ; */
+    border-radius: 10px;
+    padding:1rem;
     box-shadow:var(--shadow);
+}
+.card--content--wrapper h1{
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.card--content--wrapper p{
+ padding: 0.4rem .5rem;
 }
