--- a/client/src/components/UserForm/style.css
+++ b/client/src/components/UserForm/style.css
@@ -16,7 +16,7 @@
    transform-style:preserve-3d;
    position:relative;
    transition: transform 0.6s;
-   box-shadow:var(--shadow);
+   /* box-shadow:var(--shadow); */
 
 
 
