--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,11 +39,13 @@ a{
 }
 
 .btn--c{
-  padding:.5rem 2rem;
+  padding:.5rem 4rem;
   background-color:var(--highlighter);
   color:var(--bg--primary);
   border-radius:10px;
   box-shadow:var(--shadow);
+  margin-top:1rem;
+  font-size:1.5rem;
 }
 
 
