--- a/client/src/pages/landing/style.css
+++ b/client/src/pages/landing/style.css
@@ -1,17 +1,33 @@
 .landing--text{
-    width:inherit;
+    width:100%;
+    
     
 }
 .height-100{
     min-height:100vh;
 }
-.landing--text h1{
-    font-size:4rem;
-    font-weight:500;
+.landing--text h1,.det--section h1{
+    font-size:4.5rem;
+    font-weight:bold;
 }
 .landing--text p{
-    font-weight:200;
-    font-size:2rem;
+    font-weight:lighter;
+    font-size:1.5rem;
+    width:90%;
+}
+.det--section p{
+    font-weight:lighter;
+    font-size:1.5rem;
+    width:70%;
+}
+.login--section{
+    width:70%;
+    margin:auto;
+    box-shadow:var(--shadow);
+}
+.img--login--container{
+    width:50%;
+    height:inherit;
 }
 .landing--text img{
     width:500px;
@@ -26,7 +42,18 @@
     animation:down-anime 1s infinite alternate;
     transition:all .5s linear;
 }
-
+.bg--login{
+    background-position: center;
+    background-size: cover;
+}
+.transparent--bg{
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), linear-gradient(
+45deg, black, transparent);
+}
+.login--section{
+    background:#fff;
+    border-radius:10px;
+}
 
 @keyframes down-anime{
     from{
