--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
   --bg--secondary:#16C79A;
   --text--primary--heading:#333;
   --text--para:#fff;
-  --highlighter:#8D2828;
+  --highlighter:crimson;
   --btn--bg:#02475E;
   --shadow:rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
