--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -2,19 +2,17 @@
     width: 45%;
     margin: 0rem 2rem;
     position:fixed;
-    /* overflow: auto; */
     height:100vh;
-    /* border:1px solid; */
-    box-shadow:var(--shadow);
+   
     border-radius: 10px;;
 }
 .address--inp{
     width: 90%;
-    height: 7rem;
+    /* height: 5rem; */
     margin: 0.5rem 2rem;
     resize: none;
     box-shadow: var(--shadow);
-    padding:.5rem 0.5rem;
+    padding:3rem .5rem;
     border-radius: 10px;
     padding:.5rem;
 }
