--- a/client/src/components/footer/style.css
+++ b/client/src/components/footer/style.css
@@ -1,10 +1,43 @@
 footer{
     width: 100%;
-    min-height: 40vh;
-    background-color: #333;
+    height: 70vh;
+    background-color: #141414;
+    
 }
-.footer--links .link a{
-    color:#fff;
+.lg{
+    font-weight: bold;
+ color:rgb(255, 169, 49);
+
+}
+.footer--links{
+    height: 40vh;
+    
+}
+
+
+.footer--links .links a, .links{
+    color:dimgray;
     font-size:1.5rem;
     font-weight: 300;
+    /* padding:.5rem; */
+    transition:all .5s linear;
 }
+.links a:hover{
+ color:rgb(255, 169, 49);
+
+}
+.social--icons{
+    color:#fff;
+    background:rgb(255, 169, 49);
+    width: 3rem;
+    height:3rem;
+    text-align:center;
+    margin-right: .5rem;
+    padding:.8rem .8rem;
+    border-radius: 10px;
+    
+}
+.social--icons:not(:nth-child(1)){
+    margin:.5rem .5rem;
+}
+
