--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -7,7 +7,7 @@
     border-radius: 10px;;
 }
 .address--inp{
-    width: 90%;
+    width: 70%;
     /* height: 5rem; */
     margin: 0.5rem 2rem;
     resize: none;
@@ -21,4 +21,11 @@
 }
 .nolocation{
     width: 15rem;
+}
+.map--wrapper{
+    width: 80%;
+    margin: auto;
+    box-shadow:var(--shadow);
+    min-height:80vh;
+    border-radius: 20px;
 }
