--- a/client/src/components/CardComponent/style.css
+++ b/client/src/components/CardComponent/style.css
@@ -1,23 +1,49 @@
 .card{
-    width:75%;
-    min-height:10rem;
+    width:90%;
+    /* height:25rem; */
     /* border:1px solid ; */
-    margin:.5rem 2rem;
+    margin:.5rem 0rem;
     border-radius: 10px;
-    padding:1rem;
+    /* padding:1rem; */
     box-shadow:var(--shadow);
 }
+
+.img--overlay{
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,.7);
+    visibility:hidden;
+    opacity:0;
+    transition: all .5s linear;
+    z-index: 999;
+    top:0;
+}
+.card:hover >.overlay--helper .img--overlay{
+    visibility:visible;
+    opacity:1;
+}
+.card--content--wrapper{
+    width: 50%;
+}
 .card--content--wrapper h1{
-    text-align: center;
+    /* text-align: center; */
     width:100%;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.3rem;
+ padding: 0.4rem .5rem;
+
 }
 .card--content--wrapper p{
  padding: 0.4rem .5rem;
 }
 .card--img--wrapper{
-    width:10rem;
-    height:8rem;
+    width:100%;
+    /* height:10rem; */
     background-repeat: round;
+}
+.pd-p5{
+    padding: .5rem;
+}
+.bld{
+    font-weight: bold;
 }
