--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -1,20 +1,26 @@
 .cards--section{
-    width: 45%;
+    width: 50%;
     margin: 0rem 2rem;
+    /* padding-bottom: 2rem; */
     position:fixed;
-    height:100vh;
+    /* height:50vh; */
    
     border-radius: 10px;;
 }
+.loc--section{
+    background: linear-gradient(to top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5));
+    background-color: #f7f7f7;
+    height:30vh;
+}
 .address--inp{
     width: 70%;
-    /* height: 5rem; */
-    margin: 0.5rem 2rem;
+    margin: 0.5rem 0rem;
     resize: none;
-    box-shadow: var(--shadow);
     padding:3rem .5rem;
     border-radius: 10px;
     padding:.5rem;
+    border:1px solid dimgray;
+    outline:none;
 }
 .t--row{
     padding:.5rem 0.5rem
