--- a/client/src/pages/home/style.css
+++ b/client/src/pages/home/style.css
@@ -35,3 +35,10 @@
     min-height:80vh;
     border-radius: 20px;
 }
+.append-overlay{
+    width: 100%;
+    height: 110vh;
+    position: absolute;
+    background: rgba(0,0,0,.2);
+    top: 0;
+}
